Implement recycable process
